[package]
name = "oxy-app"
version.workspace = true
authors.workspace = true
description = "Oxy Application - CLI and HTTP server"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "oxy"
path = "src/main.rs"

[dependencies]
handlebars = { workspace = true }

# Core functionality
oxy = { workspace = true }
oxy-git = { workspace = true }
oxy-observability = { workspace = true, features = ["duckdb", "postgres", "clickhouse"] }
oxy-shared = { workspace = true }
agentic-analytics = { workspace = true }
agentic-builder = { workspace = true }
agentic-connector = { workspace = true, features = [
    "duckdb",
    "postgres",
    "clickhouse",
    "snowflake",
    "bigquery",
] }
agentic-core = { workspace = true }
agentic-http = { workspace = true }
agentic-pipeline = { workspace = true }
agentic-runtime = { workspace = true }
agentic-workflow = { workspace = true }
airlayer = { git = "https://github.com/oxy-hq/airlayer.git", rev = "4b92e5f" }
oxy-agent = { workspace = true }
oxy-auth = { workspace = true }
oxy-project = { workspace = true }
oxy-thread = { workspace = true }
oxy-workflow = { workspace = true }
oxy-semantic = { workspace = true }
oxy_globals = { workspace = true }
a2a = { workspace = true }
entity = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-openai = { workspace = true, features = [
    "byot",
    "chat-completion-types",
    "response-types",
    "_api",
    "responses",
    "chat-completion",
    "embedding-types",
    "embedding",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Validation
garde = { workspace = true, features = ["full"] }
schemars = { workspace = true, features = ["derive", "impl_json_schema"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging/Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
log = { workspace = true }

# Web framework
axum = { workspace = true, features = ["multipart"] }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "timeout"] }
utoipa = { workspace = true, features = ["uuid", "chrono", "axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# HTTP client
reqwest = { workspace = true }

# Code utilities
enum_dispatch = { workspace = true }
rapidfuzz = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
indicatif = { workspace = true }
headless_chrome = { workspace = true }

# Database
sea-orm = { workspace = true }
clickhouse = { workspace = true, features = ["rustls-tls"] }

# Machine learning (for traces analytics)
linfa = { workspace = true }
linfa-reduction = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }

# Data processing
arrow = { workspace = true, features = ["json"] }
parquet = { workspace = true }
duckdb = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
minijinja = { workspace = true, features = ["loader"] }
once_cell = { workspace = true }
pulldown-cmark = { workspace = true }
scopeguard = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
include_dir = { workspace = true }
tower-serve-static = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
constant_time_eq = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-sesv2 = { workspace = true }
governor = { workspace = true }
base64 = { workspace = true, features = ["std"] }
regex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
glob = { workspace = true }
wildcard = { workspace = true }
home = { workspace = true }
human-panic = { workspace = true }
humantime = { workspace = true }
indoc = { workspace = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
lazy_static = { workspace = true }
email_address = { workspace = true }
serde_urlencoded = { workspace = true }
self_update = { workspace = true }
slugify = { workspace = true }
syntect = { workspace = true }
tabled = { workspace = true }
terminal-light = { workspace = true }
terminal_size = { workspace = true }
secrecy = { workspace = true }
serde_with = { workspace = true }
strip-ansi-escapes = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs"] }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
apalis = { workspace = true }
apalis-core = { workspace = true }
apalis-sql = { workspace = true, features = ["postgres", "tokio"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
semver = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
rustc_version_runtime = { workspace = true }
sentry = { workspace = true }
omni = { workspace = true }
oxy-looker = { workspace = true }

# Database migration
migration = { workspace = true }

# MCP
rmcp = { workspace = true, features = ["server", "transport-sse-server", "transport-io"] }

# Other dependencies from core that might be needed
dotenv = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
serial_test = { workspace = true }
oxy-test-utils = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
