[package]
name = "oxy-auth"
version.workspace = true
authors.workspace = true
description = "Authentication and authorization for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true, features = ["macros"] }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Cryptography
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Shared infrastructure
oxy-shared = { workspace = true }
# Platform glue (DB connection pool + user-table filter helpers).
oxy-platform = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
