[package]
name = "oxy-billing"
version.workspace = true
authors.workspace = true
description = "Stripe-backed billing for Oxy organizations"
documentation.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
entity.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest = { workspace = true, features = ["json"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"
uuid.workspace = true

[dev-dependencies]
