[package]
name = "oxy"
version = "0.1.6" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.97"
arrow = { version = "53", default-features = false, features = ["json"] } # arrow version has to comply with duckdb version
assert_cmd = "2.0.16"
async-openai = {version = "0.28.0", features = ["byot"]}
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.7.9", features = ["macros"] }
axum-streams = { version = "0.19.0", features = ["json", "csv", "protobuf", "text"] }
base64 = "0.21"
chrono = "*"
clap = { version = "4.5.32", features = ["derive"] }
clickhouse = "0.13.2"
colored = "2.2.0"
connectorx = { version = "0.4.2", features = ["dst_arrow", "src_bigquery", "src_postgres", "src_mysql"] }
csv = "1.3.1"
dirs = "5.0.1"
dotenv = "0.15.0"
duckdb = { version = "=1.1.1", features = ["bundled"] }
entity = { path = "../entity" }
enum_dispatch = "0.3.13"
fern = { version = "0.7.1", features = ["colored"] }
futures = "0.3.31"
garde = { version = "0.21.1", features = ["full"] }
glob = "0.3.2"
home = "0.5"
human-panic = "2.0.2"
humantime = "2.2.0"
include_dir = "0.7"
indoc = "2.0.6"
itertools = "0.14.0"
lancedb = "0.17.0"
libduckdb-sys = "=1.1.1" # lock version to avoid breaking changes, such as https://github.com/duckdb/duckdb-rs/issues number 436
log = { workspace = true }
migration = { path = "../migration" }
minijinja = { version = "2.8.0", features = ["loader"] }
once_cell = "1.21.1"
pluralizer = "0.5.0"
predicates = "3.1.3"
pyo3 = { version = "=0.23.3", features = ["experimental-async", "extension-module"] } # 0.23.4 causes a bug with pyo3-arrow
pyo3-arrow = "0.6.0"
schemars = "0.8.22"
sea-orm = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.12.3", features = ["arrow-53"] }
serde_json = "1.0"
serde_yaml = "0.9"
self_update = "0.42.0"
slugify = "0.1.0"
sqlformat = { git = "https://github.com/shssoichiro/sqlformat-rs.git", rev = "80255c7" }
syntect = "5.2"
tabled = "0.17.0"
terminal-light = "1.7.0"
terminal_size = "0.4.2"
thiserror = "2.0.12"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = "0.7.14"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tower-serve-static = "0.1.1"
tqdm = "0.7.0"
snowflake-api = "0.10.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_with = "3.12.0"

[lib]
name = "oxy"
crate-type = ["cdylib", "rlib"]