[package]
name = "oxy"
version = "0.2.2" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.98"
arrow = { version = "53.4", default-features = false, features = ["json"] } # arrow version has to comply with duckdb version
assert_cmd = "2.0.17"
async-openai = {version = "0.28.1", features = ["byot"]}
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-streams = { version = "0.21.0", features = ["json", "csv", "protobuf", "text"] }
base64 = "0.22"
chrono = "*"
clap = { version = "4.5.38", features = ["derive"] }
clickhouse = "0.13.2"
colored = "3.0.0"
connectorx = { version = "0.4.3", features = ["dst_arrow", "src_bigquery", "src_postgres", "src_mysql"] }
csv = "1.3.1"
dirs = "6.0.0"
dotenv = "0.15.0"
duckdb = { version = "=1.1.1", features = ["bundled"] }
entity = { path = "../entity" }
enum_dispatch = "0.3.13"
futures = "0.3.31"
garde = { version = "0.22.0", features = ["full"] }
glob = "0.3.2"
home = "0.5"
human-panic = "2.0.2"
humantime = "2.2.0"
include_dir = "0.7"
indoc = "2.0.6"
itertools = "0.14.0"
lancedb = "0.17.0"
libduckdb-sys = "=1.1.1" # lock version to avoid breaking changes, such as https://github.com/duckdb/duckdb-rs/issues number 436
log = { workspace = true }
migration = { path = "../migration" }
minijinja = { version = "2.10.2", features = ["loader"] }
once_cell = "1.21.3"
predicates = "3.1.3"
pyo3 = { version = "=0.23.3", features = ["experimental-async", "extension-module"] } # 0.23.4 causes a bug with pyo3-arrow
pyo3-arrow = "0.6.0"
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }
sea-orm = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.13.3", features = ["arrow-53"] }
serde_json = "1.0"
serde_yaml = "0.9"
self_update = "0.42.0"
slugify = "0.1.0"
sqlformat = { git = "https://github.com/shssoichiro/sqlformat-rs.git", rev = "80255c7" }
syntect = "5.2"
tabled = "0.18.0"
terminal-light = "1.8.0"
terminal_size = "0.4.2"
thiserror = "2.0.12"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "cors", "trace"] }
tower-serve-static = "0.1.1"
tqdm = "0.7.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.15" }
secrecy = "0.10.3"
fxhash = "0.2.1"
deser-incomplete = "0.1.2"
snowflake-api = "0.10.0"
rmcp = {git="https://github.com/modelcontextprotocol/rust-sdk.git", rev="9d6f9a2e0d199c6c7f2731bd6f8f7143af060a6b", features = ["server", "transport-sse-server", "transport-io"]}
serde_with = "3.12.0"
# we use chrono::DateTimeWithTimeZone, which is not currently supported by utoipa
# need to use this until this PR is released https://github.com/juhaku/utoipa/pull/1367
utoipa = {git="https://github.com/haitrr/utoipa.git", rev="7fbfdea", features = ["uuid", "chrono", "axum_extras"] }
utoipa-axum = {git="https://github.com/haitrr/utoipa.git",rev="7fbfdea" }
utoipa-swagger-ui={git="https://github.com/haitrr/utoipa.git",rev="7fbfdea", features = ["axum"] }
strip-ansi-escapes = "=0.2.1"
regex = "1.11.1"
url = "2.5.4"
gcp-bigquery-client = "0.25.1"
fehler = "1.0.0"
sqlparser = "0.37.0"
backoff = { version = "0.4.0", features = ["tokio"] }
rustc_version_runtime = "0.3.0"
rustls = { version = "0.23.27", features = ["aws_lc_rs"] }
parquet = "53.4"
short-uuid = "0.2.0"
rapidfuzz = "0.5.0"
indexmap = "2.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
jsonschema = "0.30.0"

[lib]
name = "oxy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
