[package]
name = "oxy"
version = "0.3.0" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5"
arrow = { version = "=54.2.1", default-features = false, features = ["json"] } # arrow version has to comply with duckdb version
assert_cmd = "2.0.17"
async-openai = {version = "0.29.3", features = ["byot"]}
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros", "http2"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-streams = { version = "0.23.1", features = ["json", "csv", "protobuf", "text"] }
base64 = "0.22"
bcrypt = "0.17.1"
chrono = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
clickhouse = { version = "0.13.3", features = ["rustls-tls"] }
colored = "3.0.0"
connectorx = { version = "0.4.4", features = ["dst_arrow", "src_bigquery", "src_postgres", "src_mysql"] }
csv = "1.3.1"
dirs = "6.0.0"
dotenv = "0.15.0"
duckdb = { version = "=1.2.2", features = ["bundled"] }
email_address = "0.2.9"
entity = { path = "../entity" }
oxy-semantic = { path = "../semantic" }
enum_dispatch = "0.3.13"
futures = "0.3.31"
garde = { version = "0.22.0", features = ["full"] }
glob = "0.3.3"
home = "0.5"
human-panic = "2.0.3"
humantime = "2.3.0"
include_dir = "0.7"
indoc = "2.0.6"
itertools = "0.14.0"
jsonwebtoken = "9.3"
lancedb = "0.19.1"
lazy_static = "1.5.0"
lettre = "0.11.18"
libduckdb-sys = "=1.2.2" # lock version to avoid breaking changes, such as https://github.com/duckdb/duckdb-rs/issues number 436
log = { workspace = true }
migration = { path = "../migration" }
minijinja = { version = "2.12.0", features = ["loader"] }
once_cell = "1.21.3"
predicates = "3.1.3"
pyo3 = { version = "=0.26.0", features = ["experimental-async", "extension-module"] }
rand = "0.9"
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }
sea-orm = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.13.6", features = ["arrow-54"] }
serde_json = "1.0.145"
self_update = "0.42.0"
slugify = "0.1.0"
sqlformat = { git = "https://github.com/shssoichiro/sqlformat-rs.git", rev = "80255c7" }
syntect = "5.2"
tabled = "0.20.0"
terminal-light = "1.8.0"
terminal_size = "0.4.3"
thiserror = "2.0.16"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tower-serve-static = "0.1.1"
tqdm = "0.8.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
reqwest = { version = "0.12.23" }
secrecy = "0.10.3"
fxhash = "0.2.1"
deser-incomplete = "0.1.2"
snowflake-api = "0.11.0"
rmcp = {git="https://github.com/modelcontextprotocol/rust-sdk.git", rev="9d6f9a2e0d199c6c7f2731bd6f8f7143af060a6b", features = ["server", "transport-sse-server", "transport-io"]}
serde_with = "3.14.1"
# we use chrono::DateTimeWithTimeZone, which is not currently supported by utoipa
# need to use this until this PR is released https://github.com/juhaku/utoipa/pull/1367
utoipa = {git="https://github.com/haitrr/utoipa.git", rev="776f86e", features = ["uuid", "chrono", "axum_extras"] }
utoipa-axum = {git="https://github.com/haitrr/utoipa.git",rev="776f86e" }
utoipa-swagger-ui={git="https://github.com/haitrr/utoipa.git",rev="776f86e", features = ["axum"] }
strip-ansi-escapes = "=0.2.1"
regex = "1.11.2"
url = "2.5.7"
gcp-bigquery-client = "0.27.0"
fehler = "1.0.0"
sqlparser = "0.54.0"
backoff = { version = "0.4.0", features = ["tokio"] }
rustc_version_runtime = "0.3.0"
apalis = "0.7.3"
apalis-core = "0.7.3"
apalis-sql = { version = "0.7.3", features = ["sqlite", "postgres", "tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
rustls = { version = "0.23.32", features = ["aws_lc_rs"] }
parquet = "=54.2.1"  # needs to be the same with arrow version
short-uuid = "0.2.0"
rapidfuzz = "0.5.0"
indexmap = "2.11.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
jsonschema = "0.33.0"
sanitize-filename="0.6.0"
google-oauth = "1.11.3"
ndarray = { version = "0.16.1" }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_yaml = "0.9.34"
urlencoding="2.1.3"
tempfile = "3.23"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
aho-corasick = "1.1"
rkyv = { version = "0.7", features = ["validation"] }
sentry = { version = "0.42", features = ["tower-axum-matched-path", "rustls", "tracing"] }

[dev-dependencies]
tempfile = "3.23"

[lib]
name = "oxy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
