[package]
name = "entity"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sea-orm = { workspace = true }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true }

[lib]
name = "entity"
path = "src/lib.rs"
