[package]
name = "oxy_globals"
version = "0.3.20"
authors.workspace = true
description = "Global semantics registry and inheritance support for Oxy."
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
indexmap = { version = "2.12.1", features = ["serde"] }
regex = "1.12.2"
minijinja = "2.13.0"

[dev-dependencies]
tempfile = "3.23.0"
