[package]
name = "oxy_globals"
version = "0.4.5"
authors.workspace = true
description = "Global semantics registry and inheritance support for Oxy."
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
