[package]
name = "migration"
version = "0.5.0" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true }
entity = { path = "../entity" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
sea-orm = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"