[package]
name = "migration"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true }
entity = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true }
sea-orm = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"
