[package]
name = "oxy-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
oxy-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Backend-specific deps (feature-gated)
duckdb = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
clickhouse = { workspace = true, features = ["rustls-tls"], optional = true }

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]
postgres = ["dep:sea-orm"]
clickhouse = ["dep:clickhouse"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
