[package]
name = "omni"
version = "0.3.15"
authors.workspace = true
description = "Omni integration for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
# Core dependencies for HTTP client and async operations
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

# Error handling and validation
thiserror = "2.0.17"
garde = { version = "0.22.0", features = ["full"] }

# Logging and tracing
tracing = "0.1.41"

# Utilities
urlencoding = "2.1.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.23"
