[package]
name = "omni"
version = "0.5.5"
authors.workspace = true
description = "Omni integration for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
# Core dependencies for HTTP client and async operations
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling and validation
thiserror = { workspace = true }
garde = { version = "0.22.1", features = ["full"] }

# Logging and tracing
tracing = { workspace = true }

# Utilities
urlencoding = "2.1.3"
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
