[package]
name = "onyx-desktop"
version = "0.1.34" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
log = "0.4"
onyx = { path = "../onyx-core" }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
tauri = { version = "2.0.3", features = ["config-json5"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.41", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.0.1", features = ["config-json5"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "onyx_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
