[package]
name = "onyx-desktop"
version = "0.2.6" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
onyx = { path = "../onyx-core" }
migration = { path = "../migration" }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
tauri = { version = "2.2.5", features = ["config-json5"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2.2.2"
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
tauri-plugin-store = "2"

[build-dependencies]
tauri-build = { version = "2.0.5", features = ["config-json5"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "onyx_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
