[package]
name = "onyx-py"
version = "0.1.34" # TODO: remove this when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
onyx = { path = "../onyx-core" }
tokio = { workspace = true }

[dependencies.pyo3]
version = "=0.23.3"
features = ["experimental-async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "onyx_py"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "=0.23.3"
