[package]
name = "oxy-project"
version.workspace = true
authors.workspace = true
description = "Project and workspace management for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Git operations
git2 = { workspace = true }

# File system
glob = { workspace = true }
dirs = { workspace = true }
include_dir = { workspace = true }

# Web framework
axum = { workspace = true }
utoipa = { workspace = true, features = ["uuid", "chrono", "axum_extras"] }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Shared infrastructure
oxy-shared = { workspace = true }
# oxy-config = { path = "../config" }  # Access via oxy::config instead
oxy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
