[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "py"
version = "0.1.0"
description = "Python bindings for Oxy"
authors = ["The Oxy Team"]
package-mode = false

[tool.poetry.group.main.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.8"
ruff = "^0.8.2"
