[package]
name = "oxy-semantic"
version = "0.3.17"
authors.workspace = true
description = "Oxy Semantic Layer"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
regex = "1.12.2"
indexmap = "2.12.0"
serde_yaml = "0.9.34"
minijinja = "2.12.0"
oxy_globals = { path = "../globals" }

[dev-dependencies]
tempfile = "3.23.0"
