[package]
name = "oxy-semantic"
version = "0.5.5"
authors.workspace = true
description = "Oxy Semantic Layer"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
serde_yaml = { workspace = true }
minijinja = { workspace = true }
oxy_globals = { path = "../globals" }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
