[package]
name = "oxy-semantic"
version.workspace = true
authors.workspace = true
description = "Oxy Semantic Layer"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
schemars = { workspace = true, features = ["derive", "impl_json_schema"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
serde_yaml = { workspace = true }
minijinja = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
